# fast-diff-report

./: LICENSE  README.md  pyproject.toml
src/: fast_diff_report.py
